Bug 1276837 (part 1) - Shrink NodePool::Block. r=mccr8.

15% of our "small" OOM crashes are allocations of this struct. Halving its size
will hopefully help reduce that.

--HG--
extra : rebase_source : 5480a540a9584899def045c1401a5aa9a271d72c